feat: implement contact form and footer layout with corresponding styles

--- a/style.css
+++ b/style.css
@@ -1,5 +1,78 @@
-/* Start coding here */
 body {
-    font-family: "Roboto", sans-serif;
-    background-color: #F6F6FB;
-  }
+  font-family: "Roboto", sans-serif;
+  background-color: #f6f6fb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  --card-padding: clamp(24px, 30vw, 150px);
+  padding: 100px;
+}
+
+.container {
+  background: white;
+  padding: 70px var(--card-padding) 80px;
+  border-radius: 30px;
+}
+
+h2 {
+  margin-bottom: 40px;
+  color: black;
+  display: flex;
+  justify-content: center;
+}
+
+label {
+  display: block;
+  margin: 15px 0 5px;
+  font-size: 14px;
+  color: grey;
+
+}
+
+input {
+  width: 100%;
+  padding: 15px;
+  border: 1px solid grey;
+  border-radius: 10px;
+  font-size: 14px;
+}
+
+
+
+button {
+  width: 100%;
+  padding: 14px;
+  margin-top: 32px;
+  margin-left: 15px;
+  background: black;
+  color: white;
+  border-radius: 15px;
+  font-size: 16px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+footer {
+  margin-top: 40px;
+  padding-top: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 120px;
+  color: #666;
+  font-size: 14px;
+  width: 100%;
+  max-width: calc(100% - var(--card-padding) * 2);
+}
+
+.footer-links {
+  display: flex;
+  gap: 20px;
+}
+
+.footer-links a {
+  color: black;
+  text-decoration: none;
+}
