feat: add navbar, hero section edit: css

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   height: 100vh;
 }
 
-
 .navbar {
   display: flex;
   flex-direction: row;
@@ -172,4 +171,106 @@ a:hover {
   padding: 28px;
   gap: 40px;
   background-color: #e8dcf6;
+}
+
+.containers {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 1200px;
+  height: 600px;
+  background-color: white;
+  border-radius: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  gap: 20px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+}
+
+h2 {
+  width: 260px;
+  height: 48px;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 44px;
+  text-align: center;
+}
+
+.msg-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 12px;
+  color: #9393ac;
+}
+
+.message-container {
+  height: 80px;
+}
+
+input {
+  width: 590px;
+  height: 20px;
+  border-radius: 12px;
+  border: 1px solid #e0e0ed;
+  padding: 12px 12px 12px 16px;
+  gap: 4px;
+}
+
+input::placeholder {
+  color: #e0e0ed;
+}
+
+.submit {
+  width: 100%;
+  border-radius: 16px;
+  padding: 16px 36px;
+  gap: 6px;
+  font-weight: 600;
+  font-style: Semi Bold;
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 30px;
+  background-color: #1a1a2c;
+  color: white;
+}
+
+.footers {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 40px;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.footer-button {
+  background: none;
+  background-color: transparent;
+  border: none;
+  color: inherit;
+  box-shadow: none;
+  font-weight: 600;
+  font-style: Semi Bold;
+  font-size: 16px;
+}
+
+.text1 {
+  color: #9393ac;
 }
